# web-malha-fundiaria-ambiental

./: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  TODO.md  docker-compose.yml
app/server/: .env.example  app.js  config.js  main.py  package.json  pyproject.toml
app/server-new/: README.md  main.py  pyproject.toml  requirements.txt
app/server-new/api/: dependencies.py
app/server-new/api/routes/: README.md  charts.py  contact.py  download.py  http.py  map.py  upload.py
app/server-new/core/: config.py
app/server-new/db/queries/: charts.py
app/server-new/descriptor/: README.md  example.json
app/server-new/descriptor/basemaps/: basemaps.json
app/server-new/descriptor/groups/: malha_fundiaria.json
app/server-new/descriptor/limits/: limits.json
app/server-new/models/: README.md  group.py  layer.py
app/server-new/utils/: auxiliar.py  descriptor_builder.py  language.py
app/server/api/routes/: charts.py  map.py  proxy.py  upload.py  zonal.py
app/server/controllers/: charts.js
app/server/core/: config.py
app/server/db/: session.py
app/server/db/queries/: charts.py  map.py
app/server/middleware/: logger.js
app/server/models/: group.js  group.py  layer.js  layer.py
app/server/utils/: descriptorBuilder.js  zonal_statistics.py
tools/: README.md  pyproject.toml
tools/data-ingestion/: ingest_parquet.py
tools/data-pipeline/: 01-transform_data.py  02-ingest_data.py  03-ingest_csv.py  1-transform.py
tools/db-maintenance/: fix_gid_column.py
tools/descriptors/: compare_servers.py
tools/tif-explorer/: explore_tif.py
(+112 files in other folders)
