[project]
name = "malha-fundiaria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.12",
    "geopandas>=1.0.1",
    "sqlalchemy>=2.0.38",
    "geoalchemy2>=0.17.1",
    "pyarrow>=19.0.1",
    "duckdb>=1.5.2",
    "shapely>=2.1.2",
    "python-dotenv>=1.2.2",
    "dotenv>=0.9.9",
]
