[project]
name = "server-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "numpy>=2.1.0",
    "pyproj>=3.7.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "rasterio>=1.4.0",
    "shapely>=2.0.6",
    "uvicorn[standard]>=0.47.0",
]
